--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,25 @@
         android:theme="@style/Theme.StudentScheduler"
         tools:targetApi="31">
         <activity
+            android:name=".UI.CourseDetails"
+            android:label="Course Details"
+            android:parentActivityName=".UI.TermDetails"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value=""/>
+        </activity>
+
+        <activity
+            android:name=".UI.TermDetails"
+            android:exported="false"
+            android:label="Term Details and Course List"
+            android:parentActivityName=".UI.TermList" />
+        <activity
             android:name=".UI.TermList"
+            android:exported="false"
             android:label="Term List"
-            android:parentActivityName=".UI.MainActivity"
-            android:exported="false" />
+            android:parentActivityName=".UI.MainActivity" />
         <activity
             android:name=".UI.MainActivity"
             android:exported="true">
