--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudentScheduler"
         tools:targetApi="31">
+        <receiver
+            android:name=".MyReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
+
         <activity
             android:name=".UI.CourseDetails"
+            android:exported="false"
             android:label="Course Details"
-            android:parentActivityName=".UI.TermDetails"
-            android:exported="false">
+            android:parentActivityName=".UI.TermDetails">
             <meta-data
                 android:name="android.app.lib_name"
-                android:value=""/>
+                android:value="" />
         </activity>
-
         <activity
             android:name=".UI.TermDetails"
             android:exported="false"
