--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.StudentScheduler"
         tools:targetApi="31">
         <receiver
-            android:name=".MyReceiver"
+            android:name=".UI.MyReceiver"
             android:enabled="true"
             android:exported="true"></receiver>
 
